Enhanced text field and added hint colors. Added a `hint_name` string resource to `strings.xml` for use as a hint in the text field. Added `hint_text` color to `colors.xml` to style the text field's hint. Applied the new `hint_name` string and `hint_text` color as hint and color respectively to the text field in `activity_cause.xml` Updated the gradle to the last version Added the file AndroidProjectSystem.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background_app">#222831</color>
     <color name="background_button">#892CDC</color>
     <color name="title_text">#EEEEEE</color>
+    <color name="hint_text">#FDEBED</color>
 </resources>
