--- a/app/src/main/res/layout/activity_cause.xml
+++ b/app/src/main/res/layout/activity_cause.xml
@@ -28,6 +28,9 @@
         android:layout_marginBottom="32dp"
         android:maxLines="1"
         android:singleLine="true"
+        android:hint="@string/hint_name"
+        android:textColorHint="@color/hint_text"
+        android:textColor="@color/title_text"
         app:layout_constraintBottom_toTopOf="@id/btnStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
